# brig

./: Cargo.toml  test.sh
brig/: Cargo.toml
brig-ast/: Cargo.toml
brig-ast/src/: lib.rs
brig-codegen/: Cargo.toml
brig-codegen/src/: lib.rs
brig-codegen/src/x86_linux/: assembly_node.rs  codegen.rs  mod.rs  scratch.rs  terminator.rs
brig-common/: Cargo.toml
brig-common/src/: lib.rs  path.rs  position.rs  span.rs  sym.rs
brig-diagnostic/: Cargo.toml
brig-diagnostic/src/: lib.rs
brig-ir/: Cargo.toml
brig-ir/src/: debug.rs  lib.rs
brig-ir/src/resolve/: mod.rs
brig-lexer/: Cargo.toml
brig-lexer/src/: lib.rs  test.rs
brig-macros/: Cargo.toml
brig-macros/src/: lib.rs
brig-parser/: Cargo.toml
brig-parser/src/: adt.rs  block.rs  decl.rs  expr.rs  lib.rs  stmt.rs  test.rs
brig-ty/: Cargo.toml
brig-ty/src/: lib.rs
brig-ty/src/resolve/: mod.rs
brig-type-checker/: Cargo.toml
brig-type-checker/src/: adt.rs  block.rs  decl.rs  expr.rs  lib.rs  stmt.rs
brig/src/: args.rs  main.rs
test/: block.brig  ctest.c  max.brig  simple.brig  test.brig  vec.brig
