[package]
name = "brig"
version.workspace = true
edition.workspace = true

[dependencies]
brig-common = { path = "../brig-common" }
brig-diagnostic = { path = "../brig-diagnostic" }
brig-ast = { path = "../brig-ast" }
brig-lexer = { path = "../brig-lexer" }
brig-parser = { path = "../brig-parser" }
brig-type-checker = { path = "../brig-type-checker" }
brig-ir = { path = "../brig-ir" }
ariadne = { version = "0.4.1", features = ["auto-color"] }
